@@ -1,5 +1,12 @@
 2006-07-11  Sven Panne  <sven.panne@aedion.de>
 
+	* src/backends/alc_backend_windows.c: MMSYSTEM backend fixes based on
+	patches from Brian Keener <bkeener@thesoftwaresource.com>. Not really
+	tested, but at least things compile under Cygwin.
+
+	* configure.ac, src/backends/alc_backend_oss.c: Added autoconf magic for
+	ioctl on Cygwin.
+
 	* src/alc/alc_device.c, src/config/al_config.c: Config file parsing
 	improvements based on patches from Brian Keener
 	<bkeener@thesoftwaresource.com>. Still not perfect (e.g. for config
